update swagger and edit URL response
